--- a/.github/workflows/CI_TEST_CHANGES.yml
+++ b/.github/workflows/CI_TEST_CHANGES.yml
@@ -9,4 +9,5 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python.version: 3.7
-        run: pytest TZ3_BELOV/test_TZ3_BELOV.py
+    - name: Run test
+      run: pytest TZ3_BELOV/test_TZ3_BELOV.py
