--- a/.github/workflows/CI_TEST_CHANGES.yml
+++ b/.github/workflows/CI_TEST_CHANGES.yml
@@ -9,5 +9,14 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python.version: 3.7
+    - name: Install deps
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Run flake8
+      run: flake8
+    - name: Run mypy
+      run: mypy .
     - name: Run test
       run: pytest TZ3_BELOV/test_TZ3_BELOV.py
+      
