--- a/.github/workflows/CI_TEST_CHANGES.yml
+++ b/.github/workflows/CI_TEST_CHANGES.yml
@@ -12,11 +12,12 @@ jobs:
     - name: Install deps
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run flake8
-      run: flake8
+      run: flake8 .
     - name: Run mypy
       run: mypy .
     - name: Run test
-      run: pytest TZ3_BELOV/test_TZ3_BELOV.py
+      run: python -m pytest --import-mode=append tests/
       
