--- a/.github/workflows/CI_TEST_CHANGES.yml
+++ b/.github/workflows/CI_TEST_CHANGES.yml
@@ -15,7 +15,9 @@ jobs:
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run flake8
-      run: flake8 .
+      run: | 
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run mypy
       run: mypy .
     - name: Run test
