--- a/.github/workflows/CI_TEST_CHANGES.yml
+++ b/.github/workflows/CI_TEST_CHANGES.yml
@@ -8,7 +8,7 @@ jobs:
     - name: Install python
       uses: actions/setup-python@v2
       with:
-        python.version: 3.7
+        python-version: 3.7
     - name: Install deps
       run: |
         python -m pip install --upgrade pip
