--- a/.github/workflows/CI_TEST_CHANGES.yml
+++ b/.github/workflows/CI_TEST_CHANGES.yml
@@ -19,5 +19,4 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run test
-      run: python -m pytest —import-mode=append tests/
-      
+      run: pytest TZ3_BELOV/test_TZ3_BELOV.py  
